Fix violet link contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,10 @@
     @apply bg-transparent;
   }
 
+  .prose a code {
+    @apply dark:text-violet-400 !important;
+  }
+
   .prose pre {
     @apply rounded-lg border border-transparent dark:border-gray-900 dark:bg-black;
   }
